--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "next": "15.4.4",
-    "openai": "^5.10.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
